--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,29 @@
-img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C01_38.jpg'] {
+img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C01_38.jpg'],
+img[src='/img/cards/borderlands-fortifications.jpg'] {
 	content: url(https://github.com/lsocrate/l5r-card-images-restoration/raw/main/borderlands-fortifications.png);
 }
 
-img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C15_2.jpg'] {
+img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C15_2.jpg'],
+img[src='/img/cards/brother-s-gift-dojo.jpg'] {
 	content: url(https://github.com/lsocrate/l5r-card-images-restoration/raw/main/brothers-gift-dojo.png);
 }
 
-img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C27_2.jpg'] {
+img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C27_2.jpg'],
+img[src='/img/cards/kenson-no-gakka.jpg'] {
 	content: url(https://github.com/lsocrate/l5r-card-images-restoration/raw/main/kenson-no-gakka.jpeg);
 }
 
-img[src='/img/cards/seven-fold-palace.jpg'],
-img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C33_93.jpg'] {
+img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C33_93.jpg'],
+img[src='/img/cards/seven-fold-palace.jpg'] {
 	content: url(https://github.com/lsocrate/l5r-card-images-restoration/raw/main/seven-fold-palace.png);
   }
 
-img[src='https://images-cdn.fantasyflightgames.com/filer_public/19/a5/19a506fc-91c7-4e2a-89cd-b78bd19a4dbf/l5c01_isawa-tadaka.png'] {
+img[src='https://images-cdn.fantasyflightgames.com/filer_public/19/a5/19a506fc-91c7-4e2a-89cd-b78bd19a4dbf/l5c01_isawa-tadaka.png'],
+img[src='/img/cards/isawa-tadaka.jpg'] {
 	content: url(https://github.com/lsocrate/l5r-card-images-restoration/raw/main/tadaka1.jpeg);
 }
 
-img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C31_50.jpg'] {
+img[src='http://lcg-cdn.fantasyflightgames.com/l5r/L5C31_50.jpg'],
+img[src='/img/cards/silent-ones-monastery.jpg'] {
 	content: url(https://github.com/lsocrate/l5r-card-images-restoration/raw/main/silent-ones-monastery.jpeg);
 }
